# kmer-count

./: Cargo.toml  README.md  fasta_parser.rs  kmers_iterator.rs  main.rs
example_output/: experiment1_kmer.txt  experiment2_kmer.txt  experiment3_kmer.txt  experiment4_kmer.txt
src/: lib.rs  main.rs
