[package]
name = "kmer"
version = "0.1.0"
authors = ["Jason Yamada-Hanff <jyamada1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
structopt = "0.3"
bio = "0.37"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "kmer"
path = "main.rs"